--- a/karina-pong-styles.css
+++ b/karina-pong-styles.css
@@ -4,7 +4,7 @@ Feel free to play with things like color or font
 */
 
 html,
-<title>Expressionism through Limbo the Videogame</title>
+<title>German Expressionism of attunement through Limbo the Videogame</title>
 
 <p><font color="purple"> The purpose of this draft is to explore the traces of Expressionism through the games like Limbo.</font></p>
 
