--- a/karina-pong-styles.css
+++ b/karina-pong-styles.css
@@ -4,23 +4,31 @@ Feel free to play with things like color or font
 */
 
 html,
-<title>German Expressionism of attunement through Limbo the Videogame</title>
-
-<p><font color="purple"> The purpose of this draft is to explore the traces of Expressionism through the games like Limbo.</font></p>
 
 body {
   padding: 0;
   margin: 0;
 }
 
-#game {
-  margin: 10px;
-  border: 5px solid black;
-  left: 0;
-  position: absolute; 
-  background-image: url ;Karinakitty.gif
-  background-size: cover;
-}
+#game 
+  <style>
+  #outpic { 
+        position: absolute
+        ; 
+        top: 50px; 
+        left: 50px; 
+        width: 50%; 
+        height: 50%; 
+        background: #000; 
+        display: center; 
+        align-items: center; 
+        <img
+  </style>
+  </head>
+  <body>
+  <div id="outpic"> 
+        <img alt="picture" id="myid" src="http://www.davidbardschwarz.com/images/karinakitty.gif"> 
+     </div> 
 
 #left-paddle {
   background-color: rgb(148, 201, 24);
@@ -78,9 +86,9 @@ body {
 }
 
 .ball {
-  width: 20px;
-  height: 20px;
-  background-image: url: Karinaratta.jpg ;
+  width: 30px;
+  height: 30px;
+  background-color: pink ;
   border-radius: 10px;
   position: absolute;
   left: 50px;
